--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="icon/favicon.ico">
 
-    <title>Org Name</title>
+    <title>JTJetTecnology</title>
 
   </head>
 
@@ -20,7 +20,7 @@
     <img src="https://ed-gility.github.io/org-template-simple/images/design-thinking-n-innovation-sm.jpg" heigh=100 width=150 alt="a company logo" align="left" style="margin-right: 15px; margin-bottom: 15px;">
     
     <h2>Org Type</h2>
-    <p>Non-Profit, Not-Just-For-Profit, For-Profit</p>
+    <p>For-Profit</p>
     
     <h3>Mission Statement</h3>
     <p>Eu sed stet solet delicatissimi, nostrud neglegentur ei per, cu usu
