--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="">
     <link rel="icon" href="icon/favicon.ico">
 
-    <title>JTJetTecnology</title>
+    <title>JTJetTechnology</title>
 
   </head>
 
   <body>
 
-    <h1 style="text-align: center;">Org Name</h1>
+    <h1 style="text-align: center;">JTJetTechnology</h1>
     
     <img src="https://ed-gility.github.io/org-template-simple/images/design-thinking-n-innovation-sm.jpg" heigh=100 width=150 alt="a company logo" align="left" style="margin-right: 15px; margin-bottom: 15px;">
     
