--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h1 style="text-align: center;">JTJetTechnology</h1>
     
-    <img src="https://ed-gility.github.io/org-template-simple/images/design-thinking-n-innovation-sm.jpg" heigh=100 width=150 alt="a company logo" align="left" style="margin-right: 15px; margin-bottom: 15px;">
+    <img src="images/e885c8a4-4d0c-47a9-a7da-b6029a36a757.png" heigh=100 width=150 alt="a company logo" align="left" style="margin-right: 15px; margin-bottom: 15px;">
     
     <h2>Org Type</h2>
     <p>For-Profit</p>
