--- a/projects/homepage-report.html
+++ b/projects/homepage-report.html
@@ -16,38 +16,21 @@
   <body>
 
     <h2 style="text-align: center;">Org Name:</h2>
-    <h3>Organization Design Learning Summary</h3>
+    <h3>Homepage blog</h3>
     <p>
       Quick Description the problem to solve and how you framed it
     </p>
-    <h3>FAST report</h3>
-    <ul>
-      <li><strong>Finished</strong>
-        <br>
-        Breif description of organization and the website: include a photo
-        (screen shot) of the accepted site and a scan of your hand drawn sketch
-        <br>
-        <br>
-        <strong>Finished Product</strong>
-        <br>
-        <img src="https://ed-gility.github.io/org-template-simple/images/website-accepted.png" height=200 width=250 alt="screen shot of website front page">
-        <br>
-        <br>
-        <strong>Prototypes</strong>
-        <br>
-        <img src="https://ed-gility.github.io/org-template-simple/images/website-prototype.png" height=200 width=250 alt='scan of early website sketch / Prototype'>
-        <br>
-      </li>
-      <li><strong>Acknowledge</strong> -- list at least 2 people (at least one from a classmat demo) the other can be from web research
+    <h3>>Acknowledge</h3> 
+    <p>list at least 2 people (at least one from a classmat demo) the other can be from web research</p>
         <dl>
           <dt><strong>Person 1</strong></dt>
           <dd>describe how they helped and the link to their web page</dd>
           <dt><strong>Person 2</strong></dt>
           <dd>describe how they helped and the link to tweb page</dd>
         </dl>
-      </li>
-      <li><strong>Still Could Do</strong> -- list 2 (or more) ideas on ways one
-        could extend or go further with this project
+      <h3>Still Could Do</h3>
+    <p>list 2 (or more) ideas on ways one
+      could extend or go further with this project</p>
         <ol>
           <li>
             <strong>Idea 1</strong> -- description
@@ -56,9 +39,9 @@
             <strong>Idea 2</strong> -- description
           </li>
         </ol>
-      </li>
-      <li><strong>Technology</strong> -- describe or define the most interesting
-        or helpful technical idea learned in each category below
+      <h3>Technology</h3>
+      <p>describe or define the most interesting
+        or helpful technical idea learned in each category below</p>
         <dl>
           <dt><strong>HTML</strong></dt>
           <dd>describe/define something learned</dd>
@@ -67,8 +50,6 @@
           <dt><strong>Workflow</strong></dt>
           <dd>describe/define something learned</dd>
         </dl>
-      </li>
-    </ul>
 
     <hr>
     <span style="float: left;"><a href="#">Edgility Class</a></span>
