--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <h1 style="text-align: center;">JTJetTechnology</h1>
     
-    <img src="images/e885c8a4-4d0c-47a9-a7da-b6029a36a757.png" heigh=600 width=250 alt="a company logo" align="left" style="margin-right: 15px; margin-bottom: 15px;">
+    <img src="images/e885c8a4-4d0c-47a9-a7da-b6029a36a757.png" heigh=600 width=300
+         alt="a company logo" align="left" style="margin-right: 15px; margin-bottom: 15px;">
     
     <h2>Org Type</h2>
     <p>For-Profit</p>
