--- a/projects/homepage-report.html
+++ b/projects/homepage-report.html
@@ -23,10 +23,10 @@
     <h3>>Acknowledge</h3> 
     <p>list at least 2 people (at least one from a classmat demo) the other can be from web research</p>
         <dl>
-          <dt><strong>Person 1</strong></dt>
-          <dd>describe how they helped and the link to their web page</dd>
-          <dt><strong>Person 2</strong></dt>
-          <dd>describe how they helped and the link to tweb page</dd>
+          <dt><strong>Emma</strong></dt>
+          <dd>She gave us an idea of making our logo bigger</dd>
+          <dt><strong>W3</strong></dt>
+          <dd>http://www.w3schools.com/tags/tag_ol.asp. It taught us what "ol" means</dd>
         </dl>
       <h3>Still Could Do</h3>
     <p>list 2 (or more) ideas on ways one
@@ -44,9 +44,9 @@
         or helpful technical idea learned in each category below</p>
         <dl>
           <dt><strong>HTML</strong></dt>
-          <dd>describe/define something learned</dd>
-          <dt><strong>git</strong></dt>
-          <dd>describe/define something learned</dd>
+          <dd>We learned how to make a good logo</dd>
+          <dt><strong>We learnt how to make a logo on a website bigger</strong></dt>
+          <dd></dd>
           <dt><strong>Workflow</strong></dt>
           <dd>describe/define something learned</dd>
         </dl>
