--- a/projects/homepage-report.html
+++ b/projects/homepage-report.html
@@ -33,10 +33,10 @@
       could extend or go further with this project</p>
         <ol>
           <li>
-            <strong>Idea 1</strong> -- description
+            <strong>We can make a better logo</strong> -- description
           </li>
           <li>
-            <strong>Idea 2</strong> -- description
+            <strong>We could describe our website a bit more</strong> -- description
           </li>
         </ol>
       <h3>Technology</h3>
