--- a/projects/homepage-report.html
+++ b/projects/homepage-report.html
@@ -43,11 +43,11 @@
       <p>describe or define the most interesting
         or helpful technical idea learned in each category below</p>
         <dl>
-          <dt><strong>HTML</strong></dt>
+          <dt><strong>Image</strong></dt>
           <dd>We learned how to make a good logo</dd>
           <dt><strong>We learnt how to make a logo on a website bigger</strong></dt>
           <dd></dd>
-          <dt><strong>Workflow</strong></dt>
+          <dt><strong>We learnt how to enter a code to do a website</strong></dt>
           <dd>describe/define something learned</dd>
         </dl>
 
