updated car discription

--- a/index.html
+++ b/index.html
@@ -42,13 +42,9 @@
           webpage to communication our mission and our context for all our 
           projects</p>
       </li>
-      <li><a href="#">Project 2 Name</a>
+      <li><a href="#">JT Jet Car</a>
         <br>
-          <p>Lorem ipsum dolor sit amet, has in blandit adipiscing. Altera 
-            latine disputationi pri id. Sea te graeci audire salutandi, mei 
-            eleifend abhorreant ei. Usu cibo probo ne, veri dissentiunt te vim, 
-            admodum definiebas repudiandae vix ut. At nam enim scaevola 
-            consetetur.</p>
+          <p>Our jet car is a fan powered car made by recycled plastic. </p>
       </li>
     </ul>
 
