--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <br clear="left">
 
     <h3>Completed Project Reports</h3>
-     <img src="images/IMG_1551.JPG" heigh=100 width=250
+     <img src="FullSizeRender.jpg" heigh=100 width=250
         
          alt="a company logo" align="left" style="margin-right: 15px; margin-bottom: 15px;">
     <ul>
